--- a/sapper-svelte-photography/docker-compose.yml
+++ b/sapper-svelte-photography/docker-compose.yml
@@ -1,27 +1,5 @@
 version: "3.3"
 services:
-  traefik:
-    image: "traefik:v2.3"
-    container_name: "traefik"
-    command:
-      #- "--log.level=DEBUG"
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-    ports:
-      - "80:80"
-      - "8080:8080"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-
-  whoami:
-    image: "traefik/whoami"
-    container_name: "simple-service"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`whoami.localhost`)"
-      - "traefik.http.routers.whoami.entrypoints=web"
   postgres:
     image: postgres:12
     restart: always
@@ -29,9 +7,11 @@ services:
       - db_data:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: postgrespassword
+    ports:
+      - 5440:5432
 
   graphql-engine:
-    image: hasura/graphql-engine:v1.3.4-beta.2
+    image: hasura/graphql-engine:v2.0.0-alpha.1
     depends_on:
       - "postgres"
     restart: always
@@ -43,18 +23,12 @@ services:
       ## enable debugging mode. It is recommended to disable this in production
       HASURA_GRAPHQL_DEV_MODE: "true"
       ## uncomment next line to set an admin secret
-      # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+      HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
     ports:
-      - 9000:8080
+      - 9001:8080
     command:
       - graphql-engine
       - serve
-    labels:
-      - "traefik.port=80"
-      - "traefik.enable=true"
-      - "traefik.http.routers.hasura.rule=Host(`hasura.localhost`)"
-      - "traefik.http.routers.hasura.entrypoints=web"
-
 volumes:
   db_data:
 
