--- a/sapper-svelte-photography/package.json
+++ b/sapper-svelte-photography/package.json
@@ -6,7 +6,7 @@
     "dev": "sapper dev",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
+    "start": "PORT=4000 node __sapper__/build",
     "validate": "svelte-check --ignore src/node_modules/@sapper"
   },
   "dependencies": {
@@ -20,16 +20,21 @@
     "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.1",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "isomorphic-fetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "pg": "^8.5.1",
     "polka": "next",
     "postcss": "^8.2.4",
+    "session-file-store": "^1.5.0",
     "sirv": "^1.0.0",
     "subscriptions-transport-ws": "^0.9.18",
     "svelte-apollo": "^0.4.0",
